@@ -1,5 +1,6 @@
 Changes for 1.6.1
 
+ - [ZBX-541] fixed overwriting proxies on host import issue (Artem)
  - [ZBX-542] added processing of nextcheck for active checks (Sasha)
  - [ZBX-504] fixed date selector issue for log items in latest values screen (Artem)
  - [ZBX-529] removed links from dynamic screen graphs (Artem)
